--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,8 +2,8 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
-hello_page:
-  path: /
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
-  defaults:
-    template: 'hello_page.html.twig'
+#hello_page:
+  #path: /
+  #controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
+  #defaults:
+    #template: 'hello_page.html.twig'
